--- a/src/container/authScreen/style.css
+++ b/src/container/authScreen/style.css
@@ -29,3 +29,12 @@
     left: 48%;
     color: #007bff !important;
 }
+
+.login-btn{
+    color: #007bff;
+    text-decoration: underline;
+    padding-top: 0px;
+    padding-left: 5px;
+    border: none;
+    outline:none;
+}
