--- a/src/container/chat/style.css
+++ b/src/container/chat/style.css
@@ -1,3 +1,6 @@
+.main-container{
+    width: 100%;
+}
 .section{
     width: 100%;
     height: 100%;
@@ -28,8 +31,13 @@
     text-align: center;
 }
 
-.input_cont input{
-    width: 80%;
+.input_cont > button{
+    position: relative;
+    bottom: 9px;
+}
+
+.input_cont textarea{
+    width: 70%;
 }
 .chat-list-cont{
     list-style-type: none;
@@ -54,9 +62,37 @@
     border-radius: 10px;
     padding: 10px
 }
+
+.receiver-chat img, .sender-chat img{
+    height: 150px;
+    width: 200px;
+}
 .scrolltobottom{ 
     float: "left"; 
     clear: "both" 
+}
+
+.image-container{
+    width: 80%;
+    margin: 0px auto;
+    border: 1px solid darkgray;
+    background-color: #fff;
+    height: 200px;
+    position: relative;
+    bottom: 180px;
+}
+
+.message-image{
+    height: 100%;
+    margin: 0px auto;
+}
+
+.image-container button{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    color: darkgrey;
 }
 
 
